Fix: Issue #1 Background Image Not Showing
Fix Background Image URL in Css.
Directory Issues, FIXED!

--- a/src/assets/less/modules/heroArea.less
+++ b/src/assets/less/modules/heroArea.less
@@ -1,8 +1,7 @@
 .hero-area {
     // display: none;
     height: 75vh;
-    border: 1px solid black;
-    background-image: url('/assets/images/header-bg.jpg');
+    background-image: url('../images/header-bg.jpg');
     background-position: 50% 60%;
     background-repeat: no-repeat;
     background-size: cover;
@@ -99,9 +98,9 @@
 
 //* Larger than Mobile */
 @media (min-width: 482px)  {
-    .hero-area{
-        // display: block;
-    }
+    // .hero-area{
+    //     display: block;
+    // }
 }
 
 
